tests/NormalTests/paczka1/fuzzy1/69098399.err
Error in line 11: 6D3 A939 66,7
Error in line 13: 6B8uXTs7Lz8 A939 90,1
Error in line 25: 6B8uXTs7Lz8 S814 20,7
Error in line 30: 6D3 S814 50,0
